# strata-rag-or

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
api/: main.py
api/routes/: embed.py  health.py  orchestrate.py
api/schemas/: base.py  embed.py  orchestrate.py
app/agents/: base.py  qa_agent.py  routing_agent.py
app/core/: config.py  logging_config.py
app/orchestrator/: orchestrator.py
app/rag/: document_store.py  embeddings.py  loader.py  retriever.py  vector_store.py
app/services/: llm_service.py
deploy/: Dockerfile  docker-compose.yml
deploy/github-actions/: ci.yml
deploy/terraform/: api_gateway.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf
infrastructure/aws/: bedrock_client.py  dynamodb_client.py  lambda_handler.py  s3_storage.py
infrastructure/persistence/: memory_vector_store.py
tests/: conftest.py  test_agents.py  test_api.py  test_retriever.py
