
[project]
name = "strata-rag-orchestrator"
version = "0.1.0"
description = "Production-oriented multi-agent RAG system with AWS serverless stubs"
authors = [{name = "Carlos David Tamayo Montanez"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.flake8]
max-line-length = 100
exclude = [".venv","venv","build","dist","__pycache__"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
